CR-2007-05-09-0: Bugfix:    o fixed problems for additional cluster 
                              installation
                            o enhanced create_shell_script() to write
                              shell script name into script

CR-2007-05-08-1: Bugfix:    fixed wrong scheduler default_duration setting
                 Review:    RD

CR-2007-05-08-0: Enhancem.: fixed compilation errors for slow hosts
                               o added more output for java compilation
                               o enhanced timeout for compile
                               o fixed wrong timeout handling
                 Review:    JG

JG-2007-05-07-0: Enhancem.: Use start_sge_bin instead of eval exec,
                            use host_conf_get_suited_host instead of fixed host,
                            further cleanup.
                 Review:    RD

RD-2007-05-02-0: Enhancem.: changed check for IZ 1860 from warning to
                            error
                 Review:    JG

EB-2007-05-02-0: Enhancem.: Changed parsing code for advance reservation 
                            enhancements in qstat for v6.2
                 Review:    RD

GH-2007-04-30-0: Enhancem.: Added test for CR 6396036. This is covered by
                            IZ 125.
                 Review:    JG

GH-2007-04-27-0: Enhancem.: Added test for CR 6461308. This is covered by
                            IZ 2154: "checktree/functional/tight_integration
                            should evaluate qmaster messages"
                 Review:    JG

RD-2007-04-19-0: Bugfix:    - fixed resource_reservation
                            - fixed spooledit
                 Review:    JG

JG-2007-04-18-0: Enhancem.: added test for qconf -Mrqs with duplicate rqs names.
                 Review:    AP, MD, MP, OJ

CR-2007-04-16-0: Enhancem.: added more output for auto_reschedule test when
                            timeout occurs.
                 Review:    RH
